# fast-squaroot

./: Dockerfile  main.py  pyproject.toml  requirements.txt
templates/: input_form.html  output_result.html
