[tool.poetry]
name = "fast-squaroot"
version = "0.9.29"
description = ""
authors = ["Indra Wahyu <wicaksana0701@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
